<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="87dp"
        android:layout_height="47dp"
        android:background="@drawable/hehe"
        android:backgroundTint="#FFEB3B"
        android:gravity="center_horizontal"
        android:hapticFeedbackEnabled="true"
        android:text="@string/high_score_text"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018"
        app:strokeColor="#FFC107"
        app:strokeWidth="2.5dp"
        tools:ignore="TextSizeCheck,VisualLintOverlap" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="170dp"
        android:layout_height="75dp"
        android:fontFamily="@font/oleoscriptregular"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="14"
        android:text="@string/Title1"
        android:gravity="center"
        android:textColor="#3BFFE8"
        android:textSize="48sp"
        android:textStyle="bold"
        app:fontFamily="@font/oleoscriptregular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="205dp"
        android:layout_height="75dp"
        android:fontFamily="@font/oleoscriptregular"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="14"
        android:text="@string/Title2"
        android:textColor="#3BFFE8"
        android:textSize="48sp"
        android:textStyle="bold"
        app:fontFamily="@font/oleoscriptregular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/TextInputBox"
        android:layout_width="360dp"
        android:layout_height="70dp"
        android:autofillHints=""
        android:background="@drawable/hehe"
        android:backgroundTintMode="add"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:elevation="15dp"
        android:ems="10"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:hint="@string/enter_the_word"
        android:inputType="text"
        android:maxLength="16"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textColorHint="#E1BEE7"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.475"
        app:strokeColor="#FFC107"
        app:strokeWidth="2.5dp"
        tools:ignore="LabelFor,DuplicateSpeakableTextCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/textInputBox"
        android:layout_width="360dp"
        android:layout_height="70dp"
        android:autofillHints=""
        android:background="@drawable/hehe"
        android:backgroundTintMode="add"
        android:bufferType="normal"
        android:elevation="15dp"
        android:ems="10"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:hint="@string/enter_the_clue"
        android:inputType="text"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textColorHint="#E1BEE7"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.634"
        app:strokeColor="#FFC107"
        app:strokeWidth="2.5dp"
        tools:ignore="LabelFor,DuplicateSpeakableTextCheck,TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="168dp"
        android:layout_height="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"
        app:srcCompat="@drawable/yellow_bar"
        tools:ignore="ContentDescription,MissingConstraints,ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="174dp"
        android:layout_height="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"
        app:srcCompat="@drawable/yellow_bar"
        tools:ignore="ContentDescription,MissingConstraints,ImageContrastCheck,VisualLintBounds" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="138dp"
        android:layout_height="61dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086"
        app:srcCompat="@drawable/crown"
        tools:ignore="ContentDescription,MissingConstraints,ImageContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="145dp"
        android:layout_height="65dp"
        android:backgroundTint="#5D3FD4"
        android:text="@string/button_start"
        android:textSize="24sp"
        android:onClick="playSong"
        app:icon="@drawable/pngkit_yellow_button_png_2912181"
        app:iconGravity="textEnd"
        app:iconTint="#FFEB3B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92"
        app:strokeColor="#FFC107"
        app:strokeWidth="2.5dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="135dp"
        android:layout_height="65dp"
        android:background="@drawable/hehe"
        android:backgroundTint="#FFEB3B"
        android:gravity="center_horizontal"
        android:hapticFeedbackEnabled="true"
        android:text="@string/word_Value"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432"
        app:strokeColor="#FFC107"
        app:strokeWidth="2.5dp"
        tools:ignore="TextSizeCheck,VisualLintOverlap" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="135dp"
        android:layout_height="65dp"
        android:background="@drawable/hehe"
        android:backgroundTint="#FFEB3B"
        android:gravity="center_horizontal"
        android:hapticFeedbackEnabled="true"
        android:text="@string/clue_Value"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59"
        app:strokeColor="#FFC107"
        app:strokeWidth="2.5dp"
        tools:ignore="TextSizeCheck,VisualLintOverlap" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="66dp"
        android:layout_height="18dp"
        android:gravity="center"
        android:text=""
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

</androidx.constraintlayout.widget.ConstraintLayout>